# ha-virtual-devices

./: GEMINI.md  LICENSE  Makefile  PROJECT_BLUEPRINT.md  README.md  agents.md  lefthook.yml  pyproject.toml  renovate.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
custom_components/virtual_devices/: __init__.py  config_flow.py  const.py  light.py  manifest.json
custom_components/virtual_devices/translations/: en.json
custom_components/virtual_step_dimmer/: __init__.py  config_flow.py  const.py  controller.py  light.py  logic.py  manifest.json
custom_components/virtual_step_dimmer/translations/: en.json
tests/: conftest.py  test_config_flow.py  test_controller.py  test_controller_properties.py  test_init.py  test_light.py  test_logic.py  test_logic_properties.py
