[tool.poetry]
name = "ha-virtual-devices"
version = "0.1.0"
description = "Home Assistant custom integration for virtual devices."
authors = ["Peter Grman <peter.grman@gmail.com>"]
readme = "README.md"
packages = [{include = "custom_components/virtual_devices"}]

[tool.poetry.dependencies]
python = ">=3.13.2,<3.14"

[tool.poetry.group.dev.dependencies]
lefthook = "^1.13.6"
ruff = "^0.14.0"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
homeassistant = "~2025.10.0"
homeassistant-stubs = "~2025.10.0"
pytest-asyncio = "*"
pytest-homeassistant-custom-component = "^0.13.286"
hypothesis = "^6.140.3"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
# Add "ANN", "D", and "PL" to the list
select = [
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C90",# mccabe complexity
    "SIM",# flake8-simplify
    "PERF",# perflint
    "ANN",# flake8-annotations
    "PL", # Pylint
    # "D",  # flake8-docstrings
]

# We also need to configure the docstring style
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
